public/v/release-3.3/_sources/concepts/stereo_depth/ess/tutorial_isaac_sim.rst.txt
Tutorial for ESS with Isaac Sim
=======================================================

.. figure:: :ir_lfs:`<resources/isaac_ros_docs/concepts/stereo_depth/ess/Rviz.png>`
    :align: center
    :width: 800px

Overview
------------

This tutorial walks you through a graph to :ir_repo:`estimate depth <isaac_ros_dnn_stereo_depth>`
with stereo images from Isaac Sim.

Tutorial Walkthrough
--------------------

1. Install and launch Isaac Sim following the steps in the :ref:`Isaac ROS Isaac Sim Setup Guide <gs_isaac_sim>`.

2. Press **Play** to start publishing data from the Isaac Sim.

    .. figure:: :ir_lfs:`<resources/isaac_ros_docs/getting_started/isaac_sim_sample_scene.png>`
        :align: center
        :width: 800px

3. Complete the ``isaac_ros_ess`` 
   :ref:`quickstart <repositories_and_packages/isaac_ros_dnn_stereo_depth/isaac_ros_ess/index:quickstart>`.

.. note::

    Use the ``ess model`` and **not** the ``ess_light model`` for the quickstart.

4. Open a second terminal and attach to the container:

   .. code:: bash

      cd ${ISAAC_ROS_WS}/src/isaac_ros_common && \
      ./scripts/run_dev.py

5. In the second terminal, start the ``isaac_ros_ess`` node using the launch files:

   .. code:: bash

      ros2 launch isaac_ros_ess isaac_ros_ess_isaac_sim.launch.py \
         engine_file_path:=${ISAAC_ROS_WS:?}/isaac_ros_assets/models/dnn_stereo_disparity/dnn_stereo_disparity_v4.1.0_onnx/ess.engine \
         threshold:=0.4

6. Optionally, you can run the visualizer script to visualize the disparity image.

   .. code:: bash

      ros2 run isaac_ros_ess isaac_ros_ess_visualizer.py

   .. figure:: :ir_lfs:`<resources/isaac_ros_docs/concepts/stereo_depth/ess/Visualizer_isaac_sim.png>`
      :align: center
